--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,43 +2,69 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .btns{
   margin: 20px , 20px;
   display: flex;
   justify-content: space-between;
   width: 40%;
 }
+.title_R{
+ color : rgb(78, 4, 78); 
+  margin: 2em !important;
+  font-size: 40px ; 
+  text-align: center; 
+ font-family:"Comic Sans MS", cursive, sans-serif ;
+ text-shadow: 2px 3px rgb(78, 4, 52) ;
+}
+.logo{
+  margin: 5em;
+}
+body{
+  background-image: url(https://images.pexels.com/photos/540522/pexels-photo-540522.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.class_form{
+text-align: center;
+margin:2em;
+}
+
+.class-input{
+border: solid 2px rgb(52, 48, 75);
+font-family:"Comic Sans MS", cursive, sans-serif;
+border-radius: 7px; 
+background-color: white;
+color: black; 
+margin:1em;
+font-size: 20px;
+}
+
+.button_login{
+background-color: pink;
+border: solid 2px black;
+border-radius: 5px;
+width: 85px;
+font-family:"Comic Sans MS", cursive, sans-serif; 
+
+}
+
+.button-form{
+font-family: "Comic Sans MS", cursive, sans-serif !important;
+background-color: pink !important;
+color: black;
+border: solid 2px black;
+width: 85px;
+}
+
+.button-connected > li{
+display: flex;
+justify-content: space-between;
+
+}
+
+
+
+
+
+
