--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   width: 40%;
 }
-.title_R{
+/* .title_R{
  color : rgb(202, 23, 139); 
  margin: 2em !important;
  padding-top: 55px;
@@ -17,30 +17,108 @@ text-align: center;
  font-family:"Comic Sans MS", cursive, sans-serif ;
  text-shadow: 2px 3px rgb(202, 23, 139) ;
 float:-50;
-}
+} */
 .logo{
   margin: 5em;
   padding-bottom: 75px;
 }
-body{
+/* body{
   background-image: url(https://images.pexels.com/photos/540522/pexels-photo-540522.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 .class_form{
+ width: 100%;
+max-width: 330px;
+padding: 15px;
+margin: auto;
+height: 100%;
 text-align: center;
-margin:2em;
+
 }
 
-.class-input{
-border: solid 2px rgb(52, 48, 75);
+/* .class-input{ */
+/* border: solid 2px rgb(52, 48, 75);
 font-family:"Comic Sans MS", cursive, sans-serif;
 border-radius: 7px; 
 background-color: white;
 color: black; 
 margin:1em;
 font-size: 20px;
+} */
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-label-group > input,
+.form-label-group > label {
+  height: 3.125rem;
+  padding: .75rem;
+}
+
+.form-label-group  label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0; /* Override default `<label>` margin */
+   line-height: 1.5;
+  color: #495057;
+  pointer-events: none;
+  cursor: text; /* Match the input under the label */
+   border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out; 
+ } 
+
+/* .form-label-group input::-webkit-input-placeholder {
+  color: transparent;
+} */
+
+/* .form-label-group input:-ms-input-placeholder {
+  color: transparent;
+} */
+
+/* .form-label-group input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::placeholder {
+  color: transparent;
+} */
+
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: 1.25rem;
+  padding-bottom: .25rem;
+}
+
+.form-label-group >input:not(:placeholder-shown) ~ label {
+  padding-top: .25rem;
+  padding-bottom: .25rem;
+  font-size: 12px;
+  color: #777;
+}
+.class_form .form-label-group label{
+  position: absolute;
+  top: 0;
+  padding: 7px, 0 0 13px;
+  transition: width 2s;
+  opacity: 0.5;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.class_form .form-label-group input :focus ~ label,
+.class_form .form-label-group input:valid ~ label{
+font-size: 80%;
+transform: translate3d(0, -100, 0);
+opacity: 1;
+color: #777;
 }
 
 .button_login{
@@ -73,6 +151,27 @@ justify-content: space-between;
 }
 
 
+/* Fallback for Edge
+-------------------------------------------------- */
+@supports (-ms-ime-align: auto) {
+  .form-label-group > label {
+    display: none;
+  }
+  .form-label-group input::-ms-input-placeholder {
+    color: #777;
+  }
+}
+
+/* Fallback for IE
+-------------------------------------------------- */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .form-label-group > label {
+    display: none;
+  }
+  .form-label-group input:-ms-input-placeholder {
+    color: #777;
+  }
+}
 
 
 
